# anomaly-detection-in-time-series-data-with-python

./: ._.git  ._.github  ._.gitignore  ._.mypy_cache  ._.pre-commit-config.yaml  ._.pytest_cache  ._2024-12-18_Anomaly-Detection-in-Time-Series-Data-with-Python-5a15089636db.py  ._LICENSE  ._README.md  .___pycache__  .__drafts  ._article.md  ._benchmark_rust.py  ._config.yaml  ._main.py  ._pyproject.toml  ._rust  ._src  ._tests  2024-12-18_Anomaly-Detection-in-Time-Series-Data-with-Python-5a15089636db.py  README.md  article.md  benchmark_rust.py  config.yaml  eia_anomaly_stl_fixed.py  main.py  pyproject.toml
.github/: ._workflows
.github/workflows/: ._ci.yml
_drafts/: .___pycache__  ._eia_anomaly_stl_fixed.py  eia_anomaly_stl_fixed.py
polars_duckdb/: .___pycache__  ._core.py  ._main.py  core.py  main.py
rust/: ._Cargo.toml  ._bench  ._core  ._py  ._target
rust/bench/: ._Cargo.toml  ._src  Cargo.toml
rust/bench/src/: ._main.rs  main.rs
rust/core/: ._Cargo.toml  ._src  Cargo.toml
rust/core/src/: ._lib.rs  lib.rs
rust/py/: ._Cargo.toml  ._src  Cargo.toml
rust/py/src/: ._lib.rs  lib.rs
src/: .___init__.py  .___pycache__  ._compute_kernel.py  ._core.py  compute_kernel.py  core.py
tests/: .___init__.py  .___pycache__  ._conftest.py  ._test_smoke.py
