[package]
name = "anomaly_detection_in_time_series_data_with_python_bench"
description = "Standalone Rust benchmark (no Python)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
anomaly_detection_in_time_series_data_with_python_core = { path = "../core" }
